ibus-hangul (1.3.1-3) unstable; urgency=low

  * debian/control:
    - build depends on libibus-1.0-dev.
    - bump standards version to 3.9.1.
  * debian/patches/ibus14.patch: port to ibus 1.4 (closes: #640712) 

 -- LI Daobing <lidaobing@debian.org>  Sat, 01 Oct 2011 20:52:32 +0800

ibus-hangul (1.3.1-2) unstable; urgency=low

  * debian/control:
    - set maintainer to pkg-ime, add me to uploaders.
    - update Vcs-* fields.

 -- LI Daobing <lidaobing@debian.org>  Sun, 27 Feb 2011 17:19:10 +0800

ibus-hangul (1.3.1-1) unstable; urgency=low

  * New upstream release.
  * debian/control:
    - build depends on libhangul-dev (>= 0.0.12)
    - bump standards version to 3.9.1.
  * debian/rules:
    - delete in config.log in clean.
    - move place of hangul_keyboard_list
  * debian/ibus-hangul.links: added.

 -- LI Daobing <lidaobing@debian.org>  Sun, 27 Feb 2011 16:15:45 +0800

ibus-hangul (1.3.0.20100329-1) unstable; urgency=low

  * New upstream release.
  * debian/control:
    - bump standards version to 3.8.4.
    - switch to ibus 1.3.
  * debian/source/format: 3.0. 

 -- LI Daobing <lidaobing@debian.org>  Sat, 03 Apr 2010 20:21:15 +0800

ibus-hangul (1.2.0.20100102-1) unstable; urgency=low

  * New upstream release.

 -- LI Daobing <lidaobing@debian.org>  Sun, 03 Jan 2010 12:46:27 +0800

ibus-hangul (1.2.0.20091031-1) unstable; urgency=low

  * new upstream release.
  * debian/control: 
    - update Vcs-* field. 
    - build depends on libhangul-dev (>= 0.0.10)

 -- LI Daobing <lidaobing@debian.org>  Sun, 01 Nov 2009 18:17:57 +0800

ibus-hangul (1.2.0.20090617-2) unstable; urgency=low

  [ LI Daobing ]
  * debian/control:
    - build-depends: libhangul-dev >= 0.0.9
    - bump standards version to 3.8.3

  [ Loïc Minier ]
  * Drop useless CROSS logic in rules; build uses dh_auto_configure.
  * Drop /usr/share/misc/config.{sub,.guess} conditionals since these are
    always present (thanks to autotools-dev bdep).
  * Pass -s to dh_* in binary-arch.