@@ -4,8 +4,9 @@ ibus-hangul (1.3.1-3) unstable; urgency=low
     - build depends on libibus-1.0-dev.
     - bump standards version to 3.9.1.
   * debian/patches/ibus14.patch: port to ibus 1.4 (closes: #640712) 
+  * debian/rules: use DH 7. 
 
- -- LI Daobing <lidaobing@debian.org>  Sat, 01 Oct 2011 20:52:32 +0800
+ -- LI Daobing <lidaobing@debian.org>  Sat, 01 Oct 2011 21:03:03 +0800
 
 ibus-hangul (1.3.1-2) unstable; urgency=low
 
